syntax = "proto3";

import "shared.proto";

message Packet{
  int64 id = 1;
  Location currentLocation = 2;
  Location finalLocation = 3;
  string senderName = 4;
  string trackingNumber = 5;
}

message GetPacketTrackingNumber{
  string trackingNumber = 1;
}

message getPacketIdRpc{
  int64 id = 1;
}

service PacketService{
  rpc getPacketById(getPacketIdRpc) returns(Packet);
  rpc getPacketByTrackingNumber(GetPacketTrackingNumber) returns(Packet);
}

